fix overflow hidden + radius being ignored by webkit
Based on solution at
http://stackoverflow.com/questions/5736503/how-to-make-css3-rounded-corn
ers-hide-overflow-in-chrome-opera

fixes #24

--- a/_orbicular.scss
+++ b/_orbicular.scss
@@ -115,6 +115,9 @@
             position:absolute;
             overflow: hidden;
 
+            // this fixes the overflow:hidden in Chrome / webkit
+            -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+
             height: $contentWidth + em;
             width: $contentWidth + em;
             margin-left: $actualBarWidth;
